@@ -4,8 +4,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 
-import javax.inject.Inject;
-
 import org.skyve.CORE;
 import org.skyve.domain.Bean;
 import org.skyve.domain.types.Timestamp;
@@ -17,31 +15,49 @@ import org.skyve.metadata.model.document.Document;
 import org.skyve.metadata.module.Module;
 import org.skyve.metadata.user.DocumentPermissionScope;
 import org.skyve.metadata.user.User;
+import org.skyve.metadata.view.TextOutput.Sanitisation;
 import org.skyve.metadata.view.View.ViewType;
 import org.skyve.persistence.DocumentQuery;
 import org.skyve.persistence.DocumentQuery.AggregateFunction;
 import org.skyve.persistence.Persistence;
 import org.skyve.util.Binder;
+import org.skyve.util.OWASP;
 import org.skyve.util.Util;
 
+import jakarta.inject.Inject;
 import modules.admin.ModulesUtil;
 import modules.admin.User.UserExtension;
 import modules.admin.domain.Audit;
 import modules.admin.domain.Audit.Operation;
 import modules.admin.domain.Generic;
+import modules.admin.domain.Job;
 import modules.admin.domain.UserDashboard;
 
 public class UserDashboardExtension extends UserDashboard {
 
 	private static final long serialVersionUID = -6841455574804123970L;
 
-	private static final String DEFAULT_ICON_CLASS = "fa fa-file-o";
+	private static final String DEFAULT_ICON_CLASS = "fa-regular fa-file";
 	private static final int TILE_COUNT_LIMIT = 6;
-	private final Set<Tile> tiles = new HashSet<>();
 	
+	private final Set<Tile> tiles = new HashSet<>();
+
 	// used for 14 day dashboard calculations
-	public static final Long TWO_WEEKS_AGO = new Long(System.currentTimeMillis() - 1209600000L);
-  
+	public static final Long TWO_WEEKS_AGO = Long.valueOf(System.currentTimeMillis() - 1209600000L);
+
+	/**
+	 * Returns true if the current logged in user has access to the Jobs document.
+	 * 
+	 * @return true if the jobs list should be visible in the User Dashboard
+	 */
+	@SuppressWarnings("static-method")
+	public boolean canReadJobs() {
+		Module module = CORE.getCustomer().getModule(Job.MODULE_NAME);
+		Document document = module.getDocument(CORE.getCustomer(), Job.DOCUMENT_NAME);
+
+		return CORE.getUser().canReadDocument(document);
+	}
+
 	@Inject
 	private transient Persistence persistence;
 
@@ -59,55 +75,47 @@ public class UserDashboardExtension extends UserDashboard {
 	 * @return The HTML markup for the favourites
 	 */
 	private void createFavourites() {
-
 		UserExtension currentUser = ModulesUtil.currentAdminUser();
 
 		// temporarily elevate user permissions to view Audit records
-		persistence.setDocumentPermissionScopes(DocumentPermissionScope.customer);
+		persistence.withDocumentPermissionScopes(DocumentPermissionScope.customer, p -> {
+			// favourites for the most common record saved by me (which hasn't been deleted)
+			if (tiles.size() < TILE_COUNT_LIMIT) {
+				createTilesCommon(popularUpdates(currentUser), Operation.update, 1, "Popular by me");
+			}
 
-		// favourites for the most common record saved by me (which hasn't been deleted)
-		if (tiles.size() < TILE_COUNT_LIMIT) {
-			createTilesCommon(popularUpdates(currentUser), Operation.update, 1, "Popular by me");
-		}
+			// favourite for the most recent record saved by me (which hasn't been deleted)
+			if (tiles.size() < TILE_COUNT_LIMIT) {
+				createTilesRecent(recentUpdates(currentUser), Operation.update, 1, "Recent by me");
+			}
 
-		// favourite for the most recent record saved by me (which hasn't been deleted)
-		if (tiles.size() < TILE_COUNT_LIMIT) {
-			createTilesRecent(recentUpdates(currentUser), Operation.update, 1, "Recent by me");
-		}
+			if (tiles.size() < TILE_COUNT_LIMIT) {
+				createTilesRecent(recentInsertDocuments(currentUser), Operation.insert, 1, "Recently created");
+			}
 
-		// favourite for the most common record saved by anyone (which hasn't been deleted)
-		if (tiles.size() < TILE_COUNT_LIMIT) {
-			createTilesCommon(popularUpdates(null), Operation.update, 1, "Popular by everyone");
-		}
-
-		if (tiles.size() < TILE_COUNT_LIMIT) {
-			createTilesRecent(recentInsertDocuments(currentUser), Operation.insert, 1, "Recently created");
-		}
-
-		if (tiles.size() < TILE_COUNT_LIMIT) {
-			// add favourites to home documents for all modules the user has access to
-			Customer customer = persistence.getUser().getCustomer();
-			for (Module module : customer.getModules()) {
-				// check if user has access to the home document
-				Document document = module.getDocument(customer, module.getHomeDocumentName());
-				if (ViewType.list.equals(module.getHomeRef())) {
-					if (CORE.getUser().canCreateDocument(document)) {
-						String reason = "Suggested for creation";
-						addTile(createTile(Operation.insert, module.getName(), module.getHomeDocumentName(), null,
-								reason));
-					}
-				} else {
-					// exclude user dashboard - we are already here
-					if (!UserDashboard.DOCUMENT_NAME.equals(document.getName()) && CORE.getUser().canAccessDocument(document)) {
-						String reason = "Suggested for viewing";
-						addTile(createTile(Operation.update, module.getName(), module.getHomeDocumentName(), null,
-								reason));
+			if (tiles.size() < TILE_COUNT_LIMIT) {
+				// add favourites to home documents for all modules the user has access to
+				Customer customer = p.getUser().getCustomer();
+				for (Module module : customer.getModules()) {
+					// check if user has access to the home document
+					Document document = module.getDocument(customer, module.getHomeDocumentName());
+					if (ViewType.list.equals(module.getHomeRef())) {
+						if (CORE.getUser().canCreateDocument(document)) {
+							String reason = "Suggested for creation";
+							addTile(createTile(Operation.insert, module.getName(), module.getHomeDocumentName(), null,
+									reason));
+						}
+					} else {
+						// exclude user dashboard - we are already here
+						if (!UserDashboard.DOCUMENT_NAME.equals(document.getName()) && CORE.getUser().canAccessDocument(document)) {
+							String reason = "Suggested for viewing";
+							addTile(createTile(Operation.update, module.getName(), module.getHomeDocumentName(), null,
+									reason));
+						}
 					}
 				}
 			}
-		}
-
-		persistence.resetDocumentPermissionScopes();
+		});
 
 		// render the tiles for display
 		for (Tile tile : tiles) {
@@ -203,9 +211,9 @@ public class UserDashboardExtension extends UserDashboard {
 					break;
 				}
 			}
-		} catch (Exception e) {
+		} catch (@SuppressWarnings("unused") Exception e) {
 			// TODO: handle exception
-			Util.LOGGER.warning("Failed to create " + reason + " tile.");
+			LOGGER.warn("Failed to create " + reason + " tile.", e);
 		}
 	}
 
@@ -289,8 +297,14 @@ public class UserDashboardExtension extends UserDashboard {
 			return null;
 		}
 
+		if (bean != null
+				&& !CORE.getUser().canReadBean(bean.getBizId(), bean.getBizModule(), bean.getBizDocument(), bean.getBizCustomer(),
+						bean.getBizDataGroupId(), bean.getBizUserId())) {
+			return null;
+		}
+
 		StringBuilder link = new StringBuilder();
-		link.append(Util.getHomeUrl());
+		link.append(Util.getBaseUrl());
 		link.append("?a=e&m=").append(moduleName).append("&d=").append(documentName);
 		if (bean != null) {
 			link.append("&i=").append(bean.getBizId());
@@ -304,8 +318,7 @@ public class UserDashboardExtension extends UserDashboard {
 		String action;
 		String actionClass = null;
 		String iconClass = (document.getIconStyleClass() == null ? DEFAULT_ICON_CLASS : document.getIconStyleClass());
-		String singularAlias = document.getSingularAlias();
-
+		String singularAlias = document.getLocalisedSingularAlias();
 
 		Tile.Operation tileOperation = Tile.Operation.view;
 
@@ -314,26 +327,51 @@ public class UserDashboardExtension extends UserDashboard {
 				action = "Delete ";
 				actionClass = "fa-times";
 				tileOperation = Tile.Operation.delete;
+
+				// clear the link if the user does not have delete permission
+				if (!user.canDeleteDocument(document)) {
+					link.setLength(0);
+				}
 				break;
 			case insert:
 				action = "Create a new ";
 				actionClass = "fa-plus";
 				tileOperation = Tile.Operation.insert;
+
+				// clear the link if the user does not have create permission
+				if (!user.canCreateDocument(document)) {
+					link.setLength(0);
+				}
 				break;
 			case update:
 				// check if the document is persistent for "view" or "edit"
 				if (document.getPersistent() == null) {
 					action = "View ";
 					actionClass = "fa-chevron-right";
+
+					// clear the link if the user does not have read permission
+					if (!user.canReadDocument(document)) {
+						link.setLength(0);
+					}
 				} else {
-					action = operation.toDescription();
+					action = operation.toLocalisedDescription();
 					actionClass = "fa-angle-up";
 					tileOperation = Tile.Operation.update;
+
+					// clear the link if the user does not have update permission
+					if (!user.canUpdateDocument(document)) {
+						link.setLength(0);
+					}
 				}
 				break;
 			default:
-				action = operation.toDescription();
+				action = operation.toLocalisedDescription();
 				actionClass = "fa-chevron-right";
+
+				// clear the link if the user does not have read permission
+				if (!user.canReadDocument(document)) {
+					link.setLength(0);
+				}
 		}
 
 		// set the document icon
@@ -344,7 +382,7 @@ public class UserDashboardExtension extends UserDashboard {
 
 		if (bean != null) {
 			// provide a thumbnail for the first image or content attribute type
-			for (Attribute a : document.getAllAttributes()) {
+			for (Attribute a : document.getAllAttributes(customer)) {
 				if (AttributeType.content.equals(a.getAttributeType())
 						|| AttributeType.image.equals(a.getAttributeType())) {
 					String cId = (String) Binder.get(bean, a.getName());
@@ -363,7 +401,7 @@ public class UserDashboardExtension extends UserDashboard {
 		StringBuilder tileText = new StringBuilder();
 		tileText.append(action).append(" ").append(singularAlias);
 		if (bean != null && bean.getBizKey() != null) {
-			tileText.append(" - ").append(bean.getBizKey());
+			tileText.append(" - ").append(OWASP.sanitise(Sanitisation.relaxed, bean.getBizKey()));
 		}
 
 		Tile tile = new Tile.Builder().action(action)
@@ -409,10 +447,10 @@ public class UserDashboardExtension extends UserDashboard {
 	}
 
 	/**
-	 * Queries the 10 most recently updated audit records, filtered by the specified user if provided.
+	 * Queries the 20 most recently updated audit records, filtered by the specified user if provided.
 	 * 
 	 * @param The user to filter the audits by
-	 * @return The last 10 audits in the system
+	 * @return The last 20 audits in the system
 	 */
 	private List<Bean> recentUpdates(UserExtension filterUser) {
 
@@ -428,7 +466,7 @@ public class UserDashboardExtension extends UserDashboard {
 		q.addBoundProjection(Audit.auditBizIdPropertyName);
 		q.addBoundOrdering(Audit.timestampPropertyName, SortDirection.descending);
 		q.addBoundOrdering(Audit.millisPropertyName, SortDirection.descending);
-		q.setMaxResults(10);
+		q.setMaxResults(20);
 
 		return q.projectedResults();
 	}
